# FMD3

./: .gitignore  Dockerfile  def-requirements.txt  dev_cmds.txt  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  versions_metadata.json
.github/workflows/: bump_packages.py  main.yml  os_pyinstaller.yaml  pyinstaller.yaml  pyinstaller.yml
.github/workflows/app_pyinstaller/: action.yaml
.github/workflows/workflow_helpers_tests/: __main__.py  __version__.py
pyinstaller/: FMD3-API.spec  FMD3-API_BundledFolder.spec  FMD3-API_SingleExe.spec  FMD3-Client.spec  FMD3-Client_BundledFolder.spec  FMD3-Client_SingleExe.spec  FMD3-WebClient.spec  FMD3-WebClient_BundledFolder.spec  FMD3-WebClient_SingleExe.spec  FMD3_BundledFolder.spec  common.py
pyinstaller/deprecated/: FMD3-Client_SingleExe.spec  FMD3-WebClient_SingleExe.spec
src/FMD3/: __init__.py  __main__.py  __version__.py  api.py  constants.py
src/FMD3/Core/: StringTemplates.py  TaskManager.py  __init__.py  downloader.py  filemanager_utils.py  hello.py  scheduler.py  utils.py
src/FMD3/DumbUI/: __init__.py
src/FMD3/Enrichers/: AniList.py  IEnricher.py  __init__.py
src/FMD3/Extensions/: IExtension.py  __init__.py
src/FMD3/Models/: Chapter.py  MangaInfo.py  SeriesInfo.py
src/FMD3/Sources/: ISource.py  ISourceMethods.py  ISourceNet.py  SearchResult.py  __init__.py
src/FMD3/TestExt/: extension.py
src/FMD3/api/: __init__.py  api.py  chapters.py  series.py  sources.py
src/FMD3/config/: FMD3.db
src/FMD3/core/: TaskManager.py  __init__.py  scheduler.py  utils.py
src/FMD3/errors/: __init__.py  sources.py
src/FMD3/models/: chapter.py  ddl_chapter_status.py  download_task.py  series_info.py
src/FMD3/sources/: ISource.py  ISourceMethods.py  ISourceNet.py  __init__.py  updater.py
src/FMD3/webui/: __init__.py
src/FMD3_API/: __main__.py  __version__.py  main.py
src/FMD3_API/app/: __init__.py
src/FMD3_API/routers/: chapters.py  series.py  sources.py
src/FMD3_Extensions/MangaDex/: MangaDex.py  Settings.py  utils.py
src/FMD3_Extensions/TestExt/: TestExt.py  extension.py
src/FMD3_Sources/: __main__.py
src/FMD3_Sources/MangaDex/: MangaDex.py  Settings.py  utils.py
src/FMD3_Sources/TestExt/: TestExt.py  extension.py
src/FMD3_Tkinter/: FMD3.ui  __init__.py  __main__.py  __version__.py  api.py  client_settings.py  run_local.py  run_web_client.py  settings.py  styles.py  test.py  ui_test.ui  utils.py  web_api.py
src/FMD3_Tkinter/_api/: __init__.py  local.py  web.py
src/FMD3_Tkinter/app/: __init__.py  baseui.py  favorites.py  main.py  series.py  styles.py  taskmanager.py  (+1 more)
src/FMD3_Tkinter_old/: __init__.py  __version__.py  i18n.py  run_web_client.py  ui_test.ui
src/ThreadedScheduler/: ThreadedScheduler.py  __init__.py
src/workflow_helpers/: run_version_bump_checker.py  versions_metadata.json
tests/: TestSource.py  __main__.py  dbutils.py  mockzip.py  output  test.db  test.db-journal
tests/TestSource/: TestSource.py
tests/complete_flows/: TestSomerhing.py
tests/modules/: test.db
(+114 files in other folders)
