[build-system]
requires = [
    "setuptools",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "FMD3"
description = "Free Manga Downloader 3"
version = "0.0.0.a1dev2"
authors = [
  { name="ThePromidius", email="thepromidiusyt@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "ComicInfo",
    "SQLAlchemy",
    "aiohttp",
    "requests",
    "pillow",
    "pathvalidate",
    "schedule",
    "userpaths"
]



[project.urls]
Homepage = "https://github.com/MangaManagerORG/FMD3"
Issues = "https://github.com/MangaManagerORG/FMD3/issues"

[tool.setuptools.packages]
[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["src"]  # ["."] by default
include = ["FMD3","FMD3.*"]  # ["*"] by default